# gtfu

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.ja.md  README.md  command-history.txt  cspell.json  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: check-pypi.yml  codeql-analysis.yml  manual.yml  python-package.yml  python-publish.yml  tests.yml
gtfu/: __init__.py  __main__.py  _api.py  cli.py  core.py  util.py
scripts/: bump_version.py
tests/: conftest.py  example.html  test___main__.py  test_gtfu.py
tests/cli/: conftest.py  test_main.py  test_print_help_message.py  test_print_version.py  test_prompt.py  test_prompt_is_markdown.py  test_prompt_url.py
tests/core/: test_get_bytes.py  test_get_title.py  test_get_title_from_url.py  test_main.py  test_normalize_url.py
