[tool.poetry]
name = "gtfu"
version = "1.1.0"
description = "Command line tool to Get pageTitle From Url."
license = "MIT"
authors = ["seijinrosen <86702775+seijinrosen@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/seijinrosen"
repository = "https://github.com/seijinrosen/gtfu"
documentation = "https://github.com/seijinrosen/gtfu"

[tool.poetry.dependencies]
python = "^3.7"

beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
pyperclip = "^1.8.2"
readchar = "^3.0.5"
requests = "^2.27.1"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
tox = "^3.25.1"

[tool.poetry.scripts]
gtfu = "gtfu.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.isort]
profile = "black"
